# erc-7007-nft-remixer

./: .gitmodules  bun.lockb  env-example  next.config.js  package.json
broadcast/Deploy.s.sol/31337/: run-1738374638.json  run-1738381689.json  run-1738416861.json  run-1738419469.json  run-1738420325.json  run-1738421676.json  run-latest.json
cache/: solidity-files-cache.json
circuits/: .gitignore  README.md  Verifier.sol  bun.lockb  generate_proof.js  package.json  source
circuits/aigc_verifier_cpp/: Makefile
circuits/server/: Cargo.toml  Dockerfile  fresh_proof.json  index.js  latest_proof.json  new_sample_input.json  package.json  panda.circom  proof_response.json  public_input.txt  sample_input.json  temp_proof.json  verify_request.json
circuits/server/src/: main.rs
contract-abi/: AIGCNFT.json  Groth16Verifier.json  addresses.json
contracts/: remappings.txt
contracts/interfaces/: IERC7007.sol
contracts/script/: Deploy.s.sol  DeployAIPrompt.s.sol  deploy-anvil.sh
contracts/src/: AIGCNFT.sol  AIPrompt.sol
contracts/src/libraries/: PoseidonUnit5L.sol
rust-webserver/: Cargo.toml  Dockerfile
rust-webserver/src/: main.rs
script/: panda.ts  run-anvil.sh
src/app/: layout.tsx  page.tsx
src/app/api/gaianet/: route.ts
src/app/api/generate-image/: route.ts
src/app/api/generate-proof/: route.ts
src/app/api/generate-text/: route.ts
src/app/api/metadata/: route.ts
src/app/create/: page.tsx
src/app/nft/[id]/: page.tsx
src/components/: HomeContent.tsx  NftCard.tsx  Web3Provider.tsx
src/config/: web3.ts
src/data/: mockNfts.ts
(+2 files in other folders)
