[package]
name = "rust-webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.1"
rand = "0.8.5"
